<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>std</groupId>
	<artifactId>std</artifactId>
	<name>std</name>

	<packaging>jar</packaging>
	<version>2.9</version>

	<organization>
		<!-- Used as the 'Vendor' for JNLP generation -->
		<name>std</name>
	</organization>
	
	<!-- https://download2.gluonhq.com/openjfx/19/openjfx-19_windows-x64_bin-sdk.zip -->
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<log4j.version>2.19.0</log4j.version>
		<javafx.version>17</javafx.version>
	</properties>
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath />
		<!-- lookup parent from reposictory -->
	</parent>

	<build>
		<finalName>std</finalName>
		<plugins>
			<plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.8</version>
			    <configuration>
			        <mainClass>app.JfxApp</mainClass>
			    </configuration>
			</plugin>
			<plugin>
			    <groupId>org.springframework.boot</groupId>
			    <artifactId>spring-boot-maven-plugin</artifactId>
			    <configuration>
			        <jvmArguments>
			            --module-path "C:\javafx-sdk-17.0.15\lib" 
			            --add-modules=javafx.controls,javafx.fxml,javafx.graphics
			        </jvmArguments>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.38</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
        </plugins>
	</build>

	<dependencies>
		<!-- exclude tomcat jdbc connection pool, use HikariCP -->
		<dependency>
		   <groupId>org.springframework.boot</groupId>
		   <artifactId>spring-boot-starter-jdbc</artifactId>
		   <exclusions>
		      <exclusion>
		         <groupId>org.apache.tomcat</groupId>
		         <artifactId>tomcat-jdbc</artifactId>
		      </exclusion>
		   </exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
		<dependency>
		    <groupId>com.squareup.okhttp3</groupId>
		    <artifactId>logging-interceptor</artifactId>
		    <version>4.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.mailjet/mailjet-client -->
		<dependency>
		    <groupId>com.mailjet</groupId>
		    <artifactId>mailjet-client</artifactId>
		    <version>5.2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-barcode -->
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-barcode</artifactId>
			<version>2.21.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.microsoft.ews-java-api/ews-java-api -->
		<dependency>
			<groupId>com.microsoft.ews-java-api</groupId>
			<artifactId>ews-java-api</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.sourceforge.lept4j/lept4j -->
		<dependency>
			<groupId>net.sourceforge.lept4j</groupId>
			<artifactId>lept4j</artifactId>
			<version>1.13.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
		<dependency>
			<groupId>net.sourceforge.tess4j</groupId>
			<artifactId>tess4j</artifactId>
			<version>4.5.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.santuario/xmlsec -->
		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>2.2.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>1.67</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.13.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>${javafx.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>${javafx.version}</version>
		</dependency>
	    <dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx</artifactId>
		    <version>${javafx.version}</version>
		    <type>pom</type>
		</dependency>
	</dependencies>
</project>
